bug fixes mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -945,15 +945,15 @@ nav ul ul ul li {
 		width: 94%;
   }
   .modal-img {
-    width: 70% !important;
+    width: 100% !important;
     height: auto;
 }
 .modal-content {
   background-color: #fefefe;
-  margin-top: 30px !important;
+  margin-top: 30px; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width:  90% !important;
+  width:  80% !important;
   height: auto;
   text-align: center;
 }
