--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -982,7 +982,7 @@ nav ul ul ul li {
   margin: 3% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width:  600px;
+  width:  70%;
   height: auto;
   text-align: center;
 }
