adding other products

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1012,8 +1012,8 @@ nav ul ul ul li {
 }
 
 .modal-img{
-    width: 500px;
-    height: auto;
+    width: auto;
+    height: 400px;
 }
 
 /* The Close Button */
