--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,18 @@ section{
 .icons:hover{
     background-color: #8b0000;
     color: #fff;
+    padding-right: 7px;
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 10px;
+    color:  #8b0000;
 }
+.dropdown{
+  font-size:10px;
+  padding:2px;
+}
+
+
 .container{
     display:flex;
     flex-wrap: wrap;
@@ -848,7 +859,7 @@ nav a {
 	display: block;
 	padding: 15px 15px;
 	color: #FFF;
-	font-size: 15px;
+	font-size: 13px;
 	text-decoration: none;
 }
 
